--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pydantic = "^1.8.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
