--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [tool.poetry]
 name = "mime"
-version = "0.1.3"
-description = ""
+version = "0.1.4"
+description = "Mime Type parsing and creation"
 authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pydantic = "^1.8.1"
 enumb = {git = "https://github.com/tombulled/enumb.git", rev = "main"}
 
 [build-system]
